2024-07-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-host-with-port-regexp): Declare.
	(tramp-set-syntax): Set also `tramp-host-with-port-regexp'.
	(tramp-build-host-with-port-regexp): New defun.
	(tramp-host-with-port-regexp): Make it a defvar.  (Bug#71972)

	* trampver.el.in (customize-package-emacs-version-alist):
	Change Tramp version integrated in Emacs 30.1.

2024-06-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.7.1 released

	* tramp-compat.el:
	* tramp-message.el (tramp-warning): Use `lwarn'.

	* trampver.el.in (customize-package-emacs-version-alist):
	Add Tramp version integrated in Emacs 30.1.

2024-06-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-skeleton-file-exists-p): Check for property only.
	(tramp-skeleton-make-process): Don't set `default-directory'.
	(tramp-handle-make-process): Set it.  (Bug#71709)

	* tramp-message.el (tramp-backtrace): Print also in batch mode.

2024-06-20  Michael Albinus  <michael.albinus@gmx.de>

	* trampver.el.in (customize-package-emacs-version-alist):
	Add Tramp version integrated in Emacs 29.4.

2024-06-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-use-file-attributes): Adapt docstring.
	Use connection-local value.

	* tramp-sh.el (tramp-open-connection-setup-interactive-shell):
	Dump os-release when `tramp-verbose' is at least 9.

2024-06-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-use-file-attributes): New defcustom and defsubst.
	(tramp-skeleton-file-exists-p):
	* tramp-adb.el (tramp-adb-handle-file-executable-p)
	(tramp-adb-handle-file-readable-p):
	* tramp-sudoedit.el (tramp-sudoedit-handle-file-executable-p)
	(tramp-sudoedit-handle-file-readable-p)
	(tramp-sudoedit-handle-file-writable-p): Use it.
	* tramp-sh.el (tramp-sh-handle-file-executable-p)
	(tramp-sh-handle-file-readable-p)
	(tramp-sh-handle-file-writable-p): Use it.
	(tramp-sh-handle-set-file-acl): Fix property name.
